// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Flex Flex 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC hHVDfG"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex IE11 minHeight solution 1 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC kwkuVs"
      height="400px"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
    <p
      class="sc-AykKF jKbmDj"
      color="currentColor"
      font-size="16px"
    >
      This solution involves using height instead min-height.
    </p>
  </div>
</div>
`;

exports[`Storyshots Flex IE11 minHeight solution 2 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC bfEzXq"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-AykKC hHVDfG"
        style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
      >
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          1
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          2
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          3
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          4
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          5
        </div>
      </div>
    </div>
    <p
      class="sc-AykKF jKbmDj"
      color="currentColor"
      font-size="16px"
    >
      This solution involves wrapping Flex element with another Flex element with column direction..
    </p>
  </div>
</div>
`;

exports[`Storyshots Flex With custom order 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC hHVDfG"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 fCpcmC"
        order="1"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 fCFVuU"
        order="3"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 fCxyQL"
        order="2"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 fCWODm"
        order="5"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 fCOrZd"
        order="4"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to center 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC kfmaOe"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to flex-end 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC yAmtA"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to flex-start 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to stretch (default) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC khOMAy"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexDirection set to column 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC bfEzXq"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexDirection set to column-reverse 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC hCqMUL"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexDirection set to row-reverse 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC jKtKTJ"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexWrap set to no-wrap (default) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 iKepQe"
      width="500"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-AykKC dKkYHc"
        style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
      >
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          1
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          2
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          3
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          4
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          5
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          6
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          7
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexWrap set to wrap 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 iKepQe"
      width="500"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-AykKC DYcjL"
        style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
      >
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          1
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          2
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          3
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          4
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          5
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          6
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          7
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexWrap set to wrap-reverse 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 iKepQe"
      width="500"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-AykKC cGflKI"
        style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
      >
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          1
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          2
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          3
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          4
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          5
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          6
        </div>
        <div
          class="Box-sc-1qu1edy-0 jgHxgc"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          7
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to center 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC jNmqHm"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to flex-end 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC hLdNpw"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to flex-start (default) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC cSjYEX"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to space-around 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC kwWCOH"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to space-between 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC iqqOmY"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to space-evenly 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC egoSOR"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;
